2008-08-05  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c (gimp_tag_entry_try_select_jellybean):
	when selecting with mouse at the end of tag entry, don't try to select
	jellybean, but allow appending tags.

2008-08-05  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/gimptag.[ch]
	* app/core/gimptagcache.c (gimp_tag_cache_load_text)
	* app/widgets/gimptagentry.c (gimp_tag_entry_assign_tags): added rules
	tag names.

2008-08-05  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/gimpfilteredcontainer.[ch]
	* app/widgets/gimpcombotagentry.[ch]: make tag popup arrow insensitive
	when tag list is empty.

2008-08-05  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagpopup.c (gimp_tag_popup_layout_tags),
	(gimp_tag_popup_list_expose): decreased height of tag highlight.

2008-08-04  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimpcombotagentry.c (gimp_combo_tag_entry_style_set):
	* app/widgets/gimptagpopup.c (gimp_tag_popup_list_expose):
	underline highlighted tags in popup list.

2008-08-04  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagpopup.c (gimp_tag_popup_new),
	(gimp_tag_popup_border_event): support scrolling with mouse wheel.

2008-08-03  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagpopup.c (gimp_tag_popup_list_expose):
	don't draw focus rectangle on insensitive item.

2008-08-03  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c (gimp_tag_entry_activate): fixed
	requirements for resource to which tags are set: it only needs to be
	visible in view.

2008-08-03  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/gimpdata.c (gimp_data_get_identifier)
	* app/core/gimptagcache.c (gimp_tag_cache_object_add),
	(tagged_to_cache_record_foreach)
	* app/core/gimptagged.c: GimpTagged identifier is now always UTF-8
	string.

2008-08-02  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/gimptagcache.c (gimp_tag_cache_load): fixed small memory
	leak.
