@@ -1,5 +1,10 @@
 2008-08-05  Aurimas Juška  <aurisj@svn.gnome.org>
 
+	* app/widgets/gimptagpopup.[ch]: horizontal space at the end of each
+	line can be used to close tag popup.
+
+2008-08-05  Aurimas Juška  <aurisj@svn.gnome.org>
+
 	* app/widgets/gimptagentry.c (gimp_tag_entry_try_select_jellybean):
 	when selecting with mouse at the end of tag entry, don't try to select
 	jellybean, but allow appending tags.
